HTTPCORE-23: Fixed threading bug in DefaultConnectingIOReactor.
Contributed by Asankha C. Perera <asankha at wso2.com>
Reviewed by Oleg Kalnichevski


git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@495901 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,10 @@
+Changes since release 4.0 Alpha 3
+-------------------
+
+* [HTTPCORE-23] Fixed threading bug in DefaultConnectingIOReactor.
+  Contributed by Asankha C. Perera <asankha at wso2.com>
+
+
 Release 4.0 Alpha 3
 -------------------
 
