HTTPCORE-24: Fixed bug in non-blocking connection implementations, which prevented the session buffer from being correctly flushed when the content coding process has been completed.
Contributed by Oleg Kalnichevski
Reviewed by Asankha C. Perera <asankha at wso2.com>


git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@495928 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,12 @@
 Changes since release 4.0 Alpha 3
 -------------------
 
+* [HTTPCORE-24] Fixed bug in non-blocking connection implementations, which 
+  prevented the session buffer from being correctly flushed when the content 
+  coding process has been completed.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+Contributed by Asankha C. Perera <asankha at wso2.com> and Oleg Kalnichevski
 * [HTTPCORE-23] Fixed threading bug in DefaultConnectingIOReactor.
   Contributed by Asankha C. Perera <asankha at wso2.com>
 
