[HTTPCORE-29]: DefaultConnectingIOReactor changed to ensure IOExceptions are correctly propagated to the caller, if an exception is thrown while initializing a newly connected socket
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@499328 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,12 +1,16 @@
 Changes since release 4.0 Alpha 3
 -------------------
 
+* [HTTPCORE-29] DefaultConnectingIOReactor changed to ensure IOExceptions 
+  are correctly propagated to the caller, if an exception is thrown while 
+  initializing a newly connected socket.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-24] Fixed bug in non-blocking connection implementations, which 
   prevented the session buffer from being correctly flushed when the content 
   coding process has been completed.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
-Contributed by Asankha C. Perera <asankha at wso2.com> and Oleg Kalnichevski
 * [HTTPCORE-23] Fixed threading bug in DefaultConnectingIOReactor.
   Contributed by Asankha C. Perera <asankha at wso2.com>
 
