updated release notes
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@503281 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since release 4.0 Alpha 3
 -------------------
 
+* [HTTPCORE-38]: Packages nio.impl.* are now impl.nio.*, same for examples.
+  Contributed by Roland Weber <rolandw at apache.org>
+
 * [HTTPCORE-27]: I/O reactors can now accept a thread factory as an optional
   parameter.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
