--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since release 4.0 Alpha 3
 -------------------
 
+* [HTTPCORE-32]: HttpRequestInterceptorList, HttpResponseInterceptorList
+  Contributed by Roland Weber <rolandw at apache.org>
+
 * [HTTPCORE-38]: Packages nio.impl.* are now impl.nio.*, same for examples.
   Contributed by Roland Weber <rolandw at apache.org>
 
