updated release notes
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@503435 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since release 4.0 Alpha 3
 -------------------
 
+* [HTTPCORE-39]: Refactored HttpStatus, spun off [English]ReasonPhraseFactory.
+  Contributed by Roland Weber <rolandw at apache.org>
+
 * [HTTPCORE-32]: HttpRequestInterceptorList, HttpResponseInterceptorList
   Contributed by Roland Weber <rolandw at apache.org>
 
