--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since release 4.0 Alpha 3
 -------------------
 
+* [HTTPCORE-40]: API classes no longer reference impl classes in module-main.
+  Contributed by Roland Weber <rolandw at apache.org>
+
 * [HTTPCORE-39]: Refactored HttpStatus, spun off [English]ReasonPhraseFactory.
   Contributed by Roland Weber <rolandw at apache.org>
 
