--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since 4.0 Alpha 4
 
+* [HTTPCORE-66]: Fixed handling of HTTP HEAD methods
+  Contributed by Steffen Pingel <spingel at limewire.com> and 
+  Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-58]: NIO HTTP connections changed to throw checked 
   ConnectionClosedException instead of unchecked IllegalStateException when 
   an attempt is made to perform an I/O operation on a closed conection
