HTTPCORE-43: Added support for FileChannel#transferFrom() and FileChannel#transferTo() methods. Direct coping from and to FileChannel is expected to improve performance of file bound operations
Contributed by Andrea Selva <selva.andre at gmail.com>
Reviewed by Oleg Kalnichevski


git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@531601 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,10 @@
 Changes since 4.0 Alpha 4
 
+* [HTTPCORE-43]: Support for FileChannel#transferFrom() and 
+  FileChannel#transferTo() methods. Direct coping from and to FileChannel is 
+  expected to improve performance of file bound operations
+  Andrea Selva <selva.andre at gmail.com>
+
 * [HTTPCORE-66]: Fixed handling of HTTP HEAD methods
   Contributed by Steffen Pingel <spingel at limewire.com> and 
   Oleg Kalnichevski <olegk at apache.org>
