HTTPCORE-75: DefaultNHttpServerConnection and DefaultNHttpClientConnection now correctly terminate the underlying I/O session when closed. BufferingHttpServiceHandler now correctly applies connection keep-alive strategy when sending a response with no content body.
Contributed by Steffen Pingel <spingel at limewire.com>
Reviewed by Oleg Kalnichevski


git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@538731 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,11 @@
 Changes since 4.0 Alpha 4
 
+* [HTTPCORE-75]: DefaultNHttpServerConnection and DefaultNHttpClientConnection 
+  now correctly terminate the underlying I/O session when closed. 
+  BufferingHttpServiceHandler now correctly applies connection keep-alive 
+  strategy when sending a response with no content body.
+  Contributed by Steffen Pingel <spingel at limewire.com>
+
 * [HTTPCORE-73]: Fixed bug preventing NHttpServiceHandler#responseReady and 
   NHttpClientHandler#requestReady events from being fired if the HTTP message 
   has no content body.
