added HttpParams.copy() to the interface, updated release notes
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@539854 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.0 Alpha 4
 
+* [HTTPCORE-71]: HttpParams can be copied.
+  Contributed by Roland Weber <rolandw at apache.org>
+
 * [HTTPCORE-75]: DefaultNHttpServerConnection and DefaultNHttpClientConnection 
   now correctly terminate the underlying I/O session when closed. 
   BufferingHttpServiceHandler now correctly applies connection keep-alive 
