--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,11 @@
 Changes since 4.0 Alpha 4
 
+* [HTTPCORE-77]: The result of CharsetDecoder#decode() and CharsetEncoder#encode() 
+  was not checked for errors resulting in an infinite loop in 
+  SessionInputBuffer#readLine() and SessionOutputBuffer#writeLine() 
+  when malformed characters were processed.
+  Contributed by Steffen Pingel <spingel at limewire.com>
+
 * [HTTPCORE-71]: HttpParams can be copied.
   Contributed by Roland Weber <rolandw at apache.org>
 
