HTTPCORE-78: Added ByteBufferAllocator interface that can be used to apply different ByteArray allocation strategies to session and content buffers
Contributed by Steffen Pingel <spingel at limewire.com>
Reviewed by Oleg Kalnichevski


git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@544950 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since 4.0 Alpha 4
 
+* [HTTPCORE-78]: Added ByteBufferAllocator interface that can be used to apply 
+  different ByteArray allocation strategies to session and content buffers.
+  Contributed by Steffen Pingel <spingel at limewire.com>
+
 * [HTTPCORE-77]: The result of CharsetDecoder#decode() and CharsetEncoder#encode() 
   was not checked for errors resulting in an infinite loop in 
   SessionInputBuffer#readLine() and SessionOutputBuffer#writeLine() 
