updated release notes
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@548074 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.0 Alpha 4
 
+* [HTTPCORE-84] Removed DateUtils/DateParseException from core.
+  Contributed by Roland Weber <rolandw at apache.org>
+
 * [HTTPCORE-63] Made I/O select interval configurable for all default I/O
   reactor implementations.
   Contributed by Oleg Kalnichevski <olegk at apache.org> and 
