Updated release opening statement in the release notes
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@550260 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,4 +1,13 @@
-Changes since 4.0 Alpha 4
+Release 4.0 Alpha 5
+-------------------
+
+The fifth ALPHA version of HttpComponents Core has been released. This release
+delivers a number of incremental improvements across the board in all modules 
+and adds several performance oriented features such as ability to transfer 
+data directly between a file and a socket channels. 
+
+HttpCore is almost fully feature complete now and we are likely to freeze 
+the public APIs as of next release (BETA1). 
 
 * [HTTPCORE-87] RuntimeExcpetions thrown in I/O worker threads are now correctly 
   propagated to the I/O reactor.
