HTTPCORE-89: DefaultConnectingIOReactor does not correctly handle local (immediate) connections on some platforms
Contributed by Sam Berlin <sberlin at gmail.com> and Oleg Kalnichevski


git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@554076 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,10 @@
+Changes since release 4.0 Alpha 5
+
+* [HTTPCORE-89]: Fixed bug in DefaultConnectingIOReactor causing incorrect 
+  handling of local (immediate) connections on some platforms (affects Sun 
+  Solaris 2.9 / Sparc and likely other Solaris 2.x platforms)
+  Contributed by Sam Berlin <sberlin at gmail.com>
+
 Release 4.0 Alpha 5
 -------------------
 
