HTTPCORE-88: Add convenience methods to HttpRequestInterceptorList, HttpResponseInterceptorList
Contributed by Andrea Selva <selva.andre at gmail.com>
Reviewed by Oleg Kalnichevski



git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@554367 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since release 4.0 Alpha 5
 
+* [HTTPCORE-88] Added convenience methods to HttpRequestInterceptorList, 
+  HttpResponseInterceptorList interfaces
+  Contributed by Andrea Selva <selva.andre at gmail.com>
+
 * [HTTPCORE-89]: Fixed bug in DefaultConnectingIOReactor causing incorrect 
   handling of local (immediate) connections on some platforms (affects Sun 
   Solaris 2.9 / Sparc and likely other Solaris 2.x platforms)
