HTTPCORE-91: updated release notes
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@555990 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since release 4.0 Alpha 5
 
+* [HTTPCORE-91] new interceptor RequestDate, renamed constants in protocol.HTTP
+  Contributed by Roland Weber <rolandw at apache.org>
+
 * [HTTPCORE-90] Version detection based on build-time properties
   Contributed by Oleg Kalnichevski <olegk at apache.org> and 
   Roland Weber <rolandw at apache.org>
