HTTPCORE-21: Transport and connection metrics
Contributed by Andrea Selva <selva.andre at gmail.com> and Oleg Kalnichevski



git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@556266 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since release 4.0 Alpha 5
 
+* [HTTPCORE-21] Transport and connection metrics
+  Contributed by Andrea Selva <selva.andre at gmail.com> and 
+  Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-91] new interceptor RequestDate, renamed constants in protocol.HTTP
   Contributed by Roland Weber <rolandw at apache.org>
 
