HTTPCORE-102: Exceeding of maximum line length limit detected late
Contributed by Steffen Pingel <spingel at limewire.com>
Reviewed by Oleg Kalnichevski


git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@556901 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since release 4.0 Alpha 5
 
+* [HTTPCORE-102] Exceeding of maximum line length limit detected late
+  Contributed by Steffen Pingel <spingel at limewire.com>
+
 * [HTTPCORE-21] Transport and connection metrics
   Contributed by Andrea Selva <selva.andre at gmail.com> and 
   Oleg Kalnichevski <olegk at apache.org>
