HTTPCORE-105: Consistent class names in base and NIO modules
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@561086 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since release 4.0 Alpha 5
 
+* [HTTPCORE-105] Consistent class names in base and NIO modules
+  Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-100] revised HttpContext hierarchy
   Contributed by Roland Weber <rolandw at apache.org>
 
