HTTPCORE-108: Close all channels registered with the I/O reactor during shutdown. Fixes the problem with DefaultListeningIOReactor not releasing socket ports until JVM is restarted
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@562854 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,10 @@
 Changes since release 4.0 Alpha 5
 
+* [HTTPCORE-108] Close all channels registered with the I/O reactor during 
+  shutdown. Fixed the problem with DefaultListeningIOReactor not releasing
+  socket ports until JVM is restarted.
+  Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-106] Pluggable HTTP message parsers and message writers
   Oleg Kalnichevski <olegk at apache.org>
 
