HTTPCORE-113: * Removed unnecessary target hostname resolution from non-blocking client protocol handlers * Moved code populating the HTTP context with a default value based on connection properties in case the target host has not been explicitly set to the RequestTargetHost protocol interceptor
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@572014 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since release 4.0 Alpha 5
 
+* [HTTPCORE-113] Removed unnecessary target hostname resolution from non-blocking client 
+  protocol handlers.
+  Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-108] Close all channels registered with the I/O reactor during 
   shutdown. Fixed the problem with DefaultListeningIOReactor not releasing
   socket ports until JVM is restarted.
