HTTPCORE-110: removed lineParser and lineFormatter attributes
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@573829 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since release 4.0 Alpha 5
 
+* [HTTPCORE-110] refactored message parsing and formatting logic
+  Contributed by Roland Weber <rolandw at apache.org>
+
 * [HTTPCORE-113] Removed unnecessary target hostname resolution from non-blocking client 
   protocol handlers.
   Oleg Kalnichevski <olegk at apache.org>
