updated release notes
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@573979 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since release 4.0 Alpha 5
 
+* [HTTPCORE-107] allow sending and receiving of SIP messages
+  Contributed by Roland Weber <rolandw at apache.org>
+
 * [HTTPCORE-114]: Fixed incorrect handling of the end-of-stream condition in SSLIOSession. 
   Oleg Kalnichevski <olegk at apache.org>
 
