--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since release 4.0 Alpha 5
 
+* [HTTPCORE-116] moved parameter names to interfaces
+  Contributed by Roland Weber <rolandw at apache.org>
+
 * [HTTPCORE-109] Improved shutdown process of the I/O reactors in NIO modules. I/O 
   reactors now attempt to terminate connections gracefully before shutting down the
   underlying socket channels.
