HTTPCORE-117: Give timed out NIO connection some grace time to close itself nicely and shut it down afterwards if still open
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@580738 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,6 @@
 Changes since release 4.0 Alpha 5
 
-* [HTTPCORE-117] Fixed bug preventing NIO connections from closing the I/O session 
+* [HTTPCORE-117] Fixed bug preventing protocol handlers from closing timed out NIO connection 
   when pending output (output session buffer is not empty). 
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
