HTTPCORE-118: Purge closed sessions prior to opening new ones. This should reduce chances of running out of memory when opening and closing lots of NIO connections in a tight loop.
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@580938 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,10 @@
 Changes since release 4.0 Alpha 5
 
+* [HTTPCORE-118] Purge closed sessions prior to opening new ones. This should reduce 
+  chances of running out of memory when opening and closing lots of NIO connections in a 
+  tight loop. 
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-117] Fixed bug preventing protocol handlers from closing timed out NIO connection 
   when pending output (output session buffer is not empty). 
   Contributed by Oleg Kalnichevski <olegk at apache.org>
