Updated downloads page for 4.0-alpha6 release
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@580960 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,7 +1,7 @@
 Release 4.0 Alpha 6
 -------------------
 
-The fifth ALPHA version of HttpComponents Core has been released. This release
+The sixth ALPHA version of HttpComponents Core has been released. This release
 sports an improved message parsing and formatting API in the base module and lots 
 of incremental improvements and bug fixes in the NIO and NIOSSL modules. 
 
