HTTPCORE-123: SSLSession loses buffered data, if the connection has been closed by the peer.
Contributed by Risto Reinpõld <risto.reinpold at gmail.com>
Reviewed by Oleg Kalnichevski


git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@584141 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,9 @@
+Changes since 4.0 Alpha 6
+
+* [HTTPCORE-123] Fixed problem with SSLSession losing buffered data, if the 
+  connection has been closed by the peer.
+  Contributed by Risto Reinpõld <risto.reinpold at gmail.com>
+
 Release 4.0 Alpha 6
 -------------------
 
