HTTPCORE-121: new interface HeaderElementIterator and its default impl
Contributed by Andrea Selva <selva.andre at gmail.com>
Reviewed by Oleg Kalnichevski


git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@584542 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.0 Alpha 6
 
+* [HTTPCORE-121] new interface HeaderElementIterator
+  Contributed by Andrea Selva <selva.andre at gmail.com>
+
 * [HTTPCORE-123] Fixed problem with SSLSession losing buffered data, if the 
   connection has been closed by the peer.
   Contributed by Risto Reinpõld <risto.reinpold at gmail.com>
